--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <a href="путь/к/файлу.zip" download>Скачать файл</a>
+
+    <a href="/zip/" download>Скачать файл</a>
+
 </body>
 </html>
