--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 <body>
 
-    <a href="путь/к/файлу.zip" download>Скачать файл</a>
+    <a href="#" download>Скачать файл</a>
 
-    <a href="/zip/" download>Скачать файл</a>
-
+  
 </body>
 </html>
