--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-    <a href="#" download>Скачать файл</a>
+    <a href="./zip" download>Скачать файл</a>
 
   
-    
+
 </body>
 </html>
