--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <a href="./zip" download>Скачать файл</a>
+    <a href="./zip/winrar-x64-602ru.exe" download>Скачать файл</a>
 
   
 
