--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
 </head>
 <body>
 
-
-    <a href="./zip/winrar-x64-602ru.exe" download>Скачать файл</a>
-
- 
-
-
-
- 
-
+    <a href="./zip/winrar-x64-602ru.zip">Скачать файл</a>
 
 </body>
 </html>
