--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Простой калькулятор</title>
+  <title>777</title>
 </head>
 <body>
 
-<input type="text" id="num1">
-<input type="text" id="num2">
-<button onclick="сложить()">Сложить</button>
-<button onclick="вычесть()">Вычесть</button>
-<button onclick="умножить()">Умножить</button>
-<button onclick="разделить()">Разделить</button>
 
-<p id="результат"></p>
 
 <script src="./js/main.js"></script>
 
